--- a/environment.yml
+++ b/environment.yml
@@ -1,25 +1,173 @@
 name: twitter_sentiment_analysis_for_economics
 channels:
   - defaults
-
 dependencies:
-  - ipykernel=5.1.3
-  - jupyterlab=1.1.4
-  - pandas=0.25.1
-  - pip=19.2.3
-  - python=3.7
-  - python-graphviz=0.8
-  - nb_conda_kernels=2.2.2
-
+  - _tflow_select=2.3.0=mkl
+  - absl-py=0.9.0=py37_0
+  - appnope=0.1.0=py37_0
+  - astor=0.8.0=py37_0
+  - attrs=19.3.0=py_0
+  - backcall=0.1.0=py37_0
+  - blas=1.0=mkl
+  - bleach=3.1.0=py37_0
+  - c-ares=1.15.0=h1de35cc_1001
+  - ca-certificates=2020.1.1=0
+  - cairo=1.14.12=hc4e6be7_4
+  - certifi=2019.11.28=py37_0
+  - decorator=4.4.1=py_0
+  - defusedxml=0.6.0=py_0
+  - entrypoints=0.3=py37_0
+  - expat=2.2.6=h0a44026_0
+  - fontconfig=2.13.0=h5d5b041_1
+  - freetype=2.9.1=hb4e5f40_0
+  - fribidi=1.0.5=h1de35cc_0
+  - gast=0.2.2=py37_0
+  - gettext=0.19.8.1=h15daf44_3
+  - glib=2.63.1=hd977a24_0
+  - google-pasta=0.1.8=py_0
+  - graphite2=1.3.13=h2098e52_0
+  - graphviz=2.40.1=hefbbd9a_2
+  - grpcio=1.16.1=py37h044775b_1
+  - h5py=2.10.0=py37h3134771_0
+  - harfbuzz=1.8.8=hb8d4a28_0
+  - hdf5=1.10.4=hfa1e0ec_0
+  - icu=58.2=h4b95b61_1
+  - importlib_metadata=1.5.0=py37_0
+  - intel-openmp=2019.4=233
+  - ipykernel=5.1.3=py37h39e3cac_1
+  - ipython=7.12.0=py37h5ca1d4c_0
+  - ipython_genutils=0.2.0=py37_0
+  - jedi=0.16.0=py37_0
+  - jinja2=2.11.1=py_0
+  - jpeg=9b=he5867d9_2
+  - json5=0.9.1=py_0
+  - jsonschema=3.2.0=py37_0
+  - jupyter_client=5.3.4=py37_0
+  - jupyter_core=4.6.1=py37_0
+  - jupyterlab=1.1.4=pyhf63ae98_0
+  - jupyterlab_server=1.0.6=py_0
+  - keras-applications=1.0.8=py_0
+  - keras-preprocessing=1.1.0=py_1
+  - libcxx=4.0.1=hcfea43d_1
+  - libcxxabi=4.0.1=hcfea43d_1
+  - libedit=3.1.20181209=hb402a30_0
+  - libffi=3.2.1=h475c297_4
+  - libgfortran=3.0.1=h93005f0_2
+  - libiconv=1.15=hdd342a3_7
+  - libpng=1.6.37=ha441bb4_0
+  - libprotobuf=3.11.4=hd9629dc_0
+  - libsodium=1.0.16=h3efe00b_0
+  - libtiff=4.1.0=hcb84e12_0
+  - libxml2=2.9.9=hf6e021a_1
+  - markdown=3.1.1=py37_0
+  - markupsafe=1.1.1=py37h1de35cc_0
+  - mistune=0.8.4=py37h1de35cc_0
+  - mkl=2019.4=233
+  - mkl-service=2.3.0=py37hfbe908c_0
+  - mkl_fft=1.0.15=py37h5e564d8_0
+  - mkl_random=1.1.0=py37ha771720_0
+  - nb_conda_kernels=2.2.2=py37_0
+  - nbconvert=5.6.1=py37_0
+  - nbformat=5.0.4=py_0
+  - ncurses=6.2=h0a44026_0
+  - notebook=6.0.3=py37_0
+  - numpy=1.18.1=py37h7241aed_0
+  - numpy-base=1.18.1=py37h6575580_1
+  - openssl=1.1.1d=h1de35cc_4
+  - opt_einsum=3.1.0=py_0
+  - pandas=0.25.1=py37h0a44026_0
+  - pandoc=2.2.3.2=0
+  - pandocfilters=1.4.2=py37_1
+  - pango=1.42.4=h060686c_0
+  - parso=0.6.1=py_0
+  - pcre=8.43=h0a44026_0
+  - pexpect=4.8.0=py37_0
+  - pickleshare=0.7.5=py37_0
+  - pip=19.2.3=py37_0
+  - pixman=0.38.0=h1de35cc_0
+  - prometheus_client=0.7.1=py_0
+  - prompt_toolkit=3.0.3=py_0
+  - protobuf=3.11.4=py37h0a44026_0
+  - ptyprocess=0.6.0=py37_0
+  - pygments=2.5.2=py_0
+  - pyrsistent=0.15.7=py37h1de35cc_0
+  - python=3.7.6=h359304d_2
+  - python-dateutil=2.8.1=py_0
+  - python-graphviz=0.8.4=py37_1
+  - pytz=2019.3=py_0
+  - pyzmq=18.1.1=py37h0a44026_0
+  - readline=7.0=h1de35cc_5
+  - scipy=1.4.1=py37h9fa6033_0
+  - send2trash=1.5.0=py37_0
+  - setuptools=45.2.0=py37_0
+  - six=1.14.0=py37_0
+  - sqlite=3.31.1=ha441bb4_0
+  - tensorboard=2.0.0=pyhb38c66f_1
+  - tensorflow=2.0.0=mkl_py37hda344b4_0
+  - tensorflow-base=2.0.0=mkl_py37h66b1bf0_0
+  - tensorflow-estimator=2.0.0=pyh2649769_0
+  - termcolor=1.1.0=py37_1
+  - terminado=0.8.3=py37_0
+  - testpath=0.4.4=py_0
+  - tk=8.6.8=ha441bb4_0
+  - tornado=6.0.3=py37h1de35cc_3
+  - traitlets=4.3.3=py37_0
+  - wcwidth=0.1.8=py_0
+  - webencodings=0.5.1=py37_1
+  - werkzeug=1.0.0=py_0
+  - wheel=0.34.2=py37_0
+  - wrapt=1.11.2=py37h1de35cc_0
+  - xz=5.2.4=h1de35cc_4
+  - zeromq=4.3.1=h0a44026_3
+  - zipp=2.2.0=py_0
+  - zlib=1.2.11=h1de35cc_3
+  - zstd=1.3.7=h5bba6e5_0
   - pip:
+    - alabaster==0.7.12
+    - appdirs==1.4.3
+    - aspy-yaml==1.3.0
+    - atomicwrites==1.3.0
+    - babel==2.8.0
+    - cfgv==3.1.0
+    - chardet==3.0.4
     - click==7.0
-
-    - pre-commit==1.18.3
-
+    - coverage==5.0.3
+    - cycler==0.10.0
+    - distlib==0.3.0
+    - docutils==0.16
+    - filelock==3.0.12
+    - identify==1.4.11
+    - idna==2.9
+    - imagesize==1.2.0
+    - kiwisolver==1.1.0
     - matplotlib==3.1.1
+    - more-itertools==8.2.0
     - nbsphinx==0.4.2
+    - nodeenv==1.3.5
+    - oauthlib==3.1.0
+    - packaging==20.1
+    - pluggy==0.13.1
+    - pre-commit==1.18.3
+    - py==1.8.1
+    - pyparsing==2.4.6
+    - pysocks==1.7.1
     - pytest==5.2.0
     - pytest-cov==2.7.1
     - pytest-pythonpath==0.7.3
-
+    - pyyaml==5.3
+    - requests==2.23.0
+    - requests-oauthlib==1.3.0
+    - snowballstemmer==2.0.0
+    - sphinx==2.4.3
+    - sphinxcontrib-applehelp==1.0.2
+    - sphinxcontrib-devhelp==1.0.2
+    - sphinxcontrib-htmlhelp==1.0.3
+    - sphinxcontrib-jsmath==1.0.1
+    - sphinxcontrib-qthelp==1.0.3
+    - sphinxcontrib-serializinghtml==1.1.4
+    - toml==0.10.0
+    - tweepy==3.8.0
+    - urllib3==1.25.8
+    - virtualenv==20.0.7
+prefix: /Applications/anaconda3/envs/twitter_sentiment_analysis_for_economics
 
