--- a/environment.yml
+++ b/environment.yml
@@ -122,6 +122,7 @@ dependencies:
   - zipp=2.2.0=py_0
   - zlib=1.2.11=h1de35cc_3
   - zstd=1.3.7=h5bba6e5_0
+  - graphviz=2.40.1=hefbbd9a_2
   - pip:
     - alabaster==0.7.12
     - appdirs==1.4.3
@@ -170,4 +171,3 @@ dependencies:
     - urllib3==1.25.8
     - virtualenv==20.0.7
 prefix: /Applications/anaconda3/envs/twitter_sentiment_analysis_for_economics
-
